examples/invalid/types/records.vbr
chord A{
    val: quarter,
    val2: whole
}

legato B{
    val: quarter,
    val2: whole
}

moderato(){
    a: A <-> A(10, maj, 10) |
    b: B <-> B('a') |
}
